[package]
name = "De-En_coder"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20 = "0.9.1"
cipher = "0.4.4"
clap = { version = "4.5.53", features = ["derive"] }
docx-rs = "0.4.18"
dotext = "0.1.1"
file-format = { version = "0.28.0", features = ["reader"] }
getrandom = "0.3.4"
rand = "0.9.2"
rdrand = "0.8.3"
sha2 = "0.10.9"
sha256 = "1.6.0"
thiserror = "1.0.69"
